...
  return {
    ...backHeaderStaticOptions,
    unstable_headerLeftItems: () => [
      iconHeaderItem({
        symbol: "chevron.left",
        onPress: onBack,
        accessibilityLabel: "戻る",
      }),
    ],
    ...(right ? { unstable_headerRightItems: () => right } : {}),
  };
}

...
